<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="demo_1_simple_dialog">DEMO 1- SIMPLE DIALOG</string>
    <string name="demo_2_buttons_dialog">DEMO 2- BUTTONS DIALOG</string>
    <string name="enter_some_text">Enter some Text</string>
    <string name="exercise_3">EXERCISE 3</string>
    <string name="demo_4_datepicker_dialog">DEMO 4 DATEPICKER DIALOG</string>
    <string name="enter_number_1">Enter Number 1:</string>
    <string name="exercise_">Exercise 3</string>
    <string name="enter_number_2">Enter Number 2:</string>
</resources>