<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonDemo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_1_simple_dialog"
        android:textColor="@color/black"
        app:backgroundTint="#E6E5E5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDemo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:backgroundTint="#E6E5E5"
            android:text="@string/demo_2_buttons_dialog" />

        <TextView
            android:id="@+id/textViewDemo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDemo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DEMO 3 TEXT INPUT DIALOG"
            android:textColor="@color/black"
            app:backgroundTint="#E6E5E5" />

        <TextView
            android:id="@+id/textViewDemo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonExercise3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:backgroundTint="#E6E5E5"
            android:text="@string/exercise_3" />

        <TextView
            android:id="@+id/textViewExercise3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDemo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_4_datepicker_dialog"
            android:textColor="@color/black"
            app:backgroundTint="#E6E5E5" />

        <TextView
            android:id="@+id/textViewDemo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDemo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DEMO 5 TIMEPICKER DIALOG"
            android:textColor="@color/black"
            app:backgroundTint="#E6E5E5" />

        <TextView
            android:id="@+id/textViewDemo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>
</LinearLayout>